--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -610,3 +610,21 @@ pre tt:after {
   color: white;
   text-decoration: none;
 }
+
+/* Netlify identity */
+.netlify-identity-menu {
+  list-style: none;
+  color: white;
+  margin: 0;
+}
+.netlify-identity-signup {
+  color: white;
+}
+
+.netlify-identity-login {
+  color: white;
+}
+
+.netlify-identity-logout {
+  color: white;
+}
